# nexoia

./: .gitignore  AGENTS.md  AUDITORIA_FORMAL_MAXIMA.md  AUDITORIA_FORMAL_NEXOIA.md  CHANGELOG.md  Cargo.toml  README.md  after_phase5.txt  build_errors.txt
.github/workflows/: ci.yml
docs/: EXECUTIVE_SUMMARY.md  NEX_GRAMMAR.md  NEX_SEMANTICS.md  THREAT_MODEL.md
examples/: allow.nex  check.nex  deny.nex  escalate.nex  hello.nex
examples/lib/: risk.nex
src/: ai.rs  decision.rs  defense.rs  evidence.rs  explain.rs  hash.rs  lgpd.rs  lgpd_rights.rs  lib.rs  limits.rs  main.rs  pipeline.rs  quality.rs  state.rs  sync.rs  types.rs
src/network/: api.rs  connection.rs  crypto.rs  crypto_key.rs  epa.rs  handshake.rs  handshake_runner.rs  heartbeat.rs  identity.rs  listener.rs  mod.rs  persistence.rs  reputation.rs  secure_transport.rs  session.rs  transport.rs  verify.rs
src/nex/: action_executor.rs  ast.rs  checkpoint.rs  eval.rs  layers.rs  mod.rs  observer.rs  parser.rs  reactive.rs
src/provenance/: aggregator.rs  compose.rs  mod.rs  signing.rs  typed_node.rs  verify.rs  witness.rs
tests/: hash_test.rs  integration_lgpd.rs  integration_test.rs  integration_verify_chain.rs  multi_node_test.rs  network_test.rs
