[package]
name = "nexoia"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "nex"
path = "src/bin/nex.rs"
