[package]
name = "nexoia"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
blake3 = "1"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
ed25519-dalek = { version = "2", features = ["serde"] }
hex = "0.4"
hkdf = "0.12"
ml-kem = { version = "0.3", features = ["alloc", "getrandom"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
pem = "3"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server"] }
parking_lot = "0.12"
ahash = "0.8"
smallvec = "1"
bytes = "1"
bumpalo = { version = "3", features = ["collections"] }
static_assertions = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
cargo-bloat = "0.1"
cargo-llvm-cov = "0.6"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "nex"
path = "src/bin/nex.rs"
